--- a/StorygenCC/StorygenCC.csproj
+++ b/StorygenCC/StorygenCC.csproj
@@ -46,14 +46,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Window.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Window.Designer.cs">
+      <DependentUpon>Window.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="storygen\Elements\Affectations.cs" />
+    <Compile Include="storygen\Elements\Animation.cs" />
+    <Compile Include="storygen\Elements\Sprite.cs" />
+    <Compile Include="storygen\Mapset\Beatmap.cs" />
+    <Compile Include="storygen\Mapset\ControlPoint.cs" />
+    <Compile Include="storygen\Mapset\HitObject.cs" />
+    <Compile Include="storygen\Mapset\HitObjectTypes\Circle.cs" />
+    <Compile Include="storygen\Mapset\HitObjectTypes\Slider.cs" />
+    <Compile Include="storygen\Mapset\HitObjectTypes\Spinner.cs" />
+    <Compile Include="storygen\Mapset\Mapset.cs" />
+    <Compile Include="storygen\Osb.cs" />
+    <Compile Include="storygen\Properties\AssemblyInfo.cs" />
+    <Compile Include="storygen\Storyboard.cs" />
+    <Compile Include="storygen\Storyboard\Easing.cs" />
+    <Compile Include="storygen\Storyboard\Layer.cs" />
+    <Compile Include="storygen\Storyboard\Origin.cs" />
+    <Compile Include="storygen\Text\Font.cs" />
+    <Compile Include="storygen\Text\Sentence.cs" />
+    <Compile Include="storygen\Text\Text.cs" />
+    <Compile Include="storygen\Util\Color.cs" />
+    <Compile Include="storygen\Util\Mesh.cs" />
+    <Compile Include="storygen\Util\Vector2.cs" />
+    <Compile Include="storygen\Util\Vector3.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Window.resx">
+      <DependentUpon>Window.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -72,9 +98,20 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="storygen\App.config" />
+    <None Include="storygen\obj\Debug\storygen.csproj.CoreCompileInputs.cache" />
+    <None Include="storygen\obj\Debug\storygen.csprojAssemblyReference.cache" />
+    <None Include="storygen\obj\Release\storygen.csproj.CoreCompileInputs.cache" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="storygen\bin\Debug\" />
+    <Folder Include="storygen\bin\Release\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="storygen\storygen.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
