--- a/StorygenCC/StorygenCC.csproj
+++ b/StorygenCC/StorygenCC.csproj
@@ -65,7 +65,6 @@
     <Compile Include="storygen\Mapset\HitObjectTypes\Spinner.cs" />
     <Compile Include="storygen\Mapset\Mapset.cs" />
     <Compile Include="storygen\Osb.cs" />
-    <Compile Include="storygen\Properties\AssemblyInfo.cs" />
     <Compile Include="storygen\Storyboard.cs" />
     <Compile Include="storygen\Storyboard\Easing.cs" />
     <Compile Include="storygen\Storyboard\Layer.cs" />
@@ -98,20 +97,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="storygen\App.config" />
-    <None Include="storygen\obj\Debug\storygen.csproj.CoreCompileInputs.cache" />
-    <None Include="storygen\obj\Debug\storygen.csprojAssemblyReference.cache" />
-    <None Include="storygen\obj\Release\storygen.csproj.CoreCompileInputs.cache" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="storygen\bin\Debug\" />
-    <Folder Include="storygen\bin\Release\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="storygen\storygen.csproj" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
